[package]
name = "damae"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.5"
colour = "0.6.0"
dialoguer = "0.9.0"
egg-mode = "0.16.0"
futures = "0.3.18"
indicatif = "0.16.2"
rustyline = "9.1.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
tokio = { version = "1.14.0", features = ["full"] }
